# Camera_Based_Manipulator_TFLite

./: CMakeLists.txt  README.md  face_detector.cpp  face_detector.h  main.cpp
